--- a/src/components/graph/graph.css
+++ b/src/components/graph/graph.css
@@ -1,7 +1,4 @@
-#my-math-input .mq-cursor {
-    border-color: white;
-
-}
-#my-math-input .mq-blink {
-    border-color: white;
+#graph {
+    background: black;
+    overflow: hidden;
 }
